Incorrect use of DFG node reference counts when mutating the graph https://bugs.webkit.org/show_bug.cgi?id=75580 <rdar://problem/10644607>

Source/JavaScriptCore:

Reviewed by Oliver Hunt.

Made deref(node) follow the pattern of ref(node), which it should have
to begin with.

* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::refChildren):
(JSC::DFG::Graph::derefChildren):
* dfg/DFGGraph.h:
(JSC::DFG::Graph::deref):
(JSC::DFG::Graph::clearAndDerefChild1):
(JSC::DFG::Graph::clearAndDerefChild2):
(JSC::DFG::Graph::clearAndDerefChild3):
* dfg/DFGNode.h:
(JSC::DFG::Node::deref):
* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::fixupNode):

LayoutTests:

Reviewed by Oliver Hunt.

* fast/js/dfg-array-length-dead-expected.txt: Added.
* fast/js/dfg-array-length-dead.html: Added.
* fast/js/script-tests/dfg-array-length-dead.js: Added.
(foo):



Canonical link: https://commits.webkit.org/92348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104086 268f45cc-cd09-0410-ab3c-d52691b4dbfc